--- a/source/_posts/公司自用工具踩坑记录.md
+++ b/source/_posts/公司自用工具踩坑记录.md
@@ -17,3 +17,19 @@ category: [踩坑记录]
 在从 NetBeans 上传源码并编译为 *.so 文件之后, 需要对 pub 进行重启, 否则无法调用更改后的功能.
 
 ## Jres 方面
+### 返回结果集解包
+这个东西坑了我差不多一天... 接口定义的返回参数中, 标准字段对应的要么是 char, 要么是 Integer, 这些可以从其他代码中获知. 如果接口定义的返回参数多于一个, 就需要用 *DTO(extends BaseDTO) 来接收, 而如果是 rows 这种对象类型, 则对应的类型是 List<RowstypeDTO>. 比如我要查询的东西返回内容是:
+```js
+row_count;
+rows[func_id, func_name, remark];
+
+ConnectTestDTO:
+Integer func_id;
+String func_name, remark;
+```
+则对应的接收 DTO 应为:
+```js
+Integer rowCount;
+List<ConnectTestDTO> rows;
+```
+在 Java 中定义的变量名与 Ares 中的标准字段名对应是用驼峰替代下划线, 如 `funcName -> func_name`.
